<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_app_root_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/btn_github"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/about_app_viewpager"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/github">

        </ImageView>

        <TextView
            android:id="@+id/about_app_viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/profile_description"
            android:textSize="24sp"
            android:textStyle="italic">

        </TextView>


    </RelativeLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/about_app_AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/about_app_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/about_app_root_layout"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@color/about_app_profileImage"
                    android:orientation="vertical">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/aboutAppImage"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="?attr/actionBarSize"
                        android:src="@drawable/me"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_width="1dp" />

                    <TextView
                        android:id="@+id/aboutAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:text="@string/prattham_arora"
                        android:textColor="#fff"
                        android:textSize="21sp" />


                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="380dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="310dp"
                    android:clipToPadding="true"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/android_developer"
                            android:textColor="@color/textcolor"
                            android:textSize="20sp"
                            android:textStyle="bold">

                        </TextView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/about_app_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/about_app_profileImage"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@android:color/white">


            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>